objects/Player_Stats__c.object
<CustomObject>
    <fields>
        <fullName>Player_Name__c</fullName>
        <label>Player Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Player_Role__c</fullName>
        <label>Player Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Batsman</fullName>
                    <default>true</default>
                    <label>Batsman</label>
                </value>
                <value>
                    <fullName>Bowler</fullName>
                </value>
                <value>
                    <fullName>All-rounder</fullName>
                </value>
                <value>
                    <fullName>Wicketkeeper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Runs_Scored__c</fullName>
        <label>Runs Scored</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Player Stats</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Player Stats Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Player Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>